# livechat_rust

./: Cargo.toml
src/: auth.rs  database.rs  handlers.rs  main.rs
static/: auth.css  script.js  style.css
templates/: authentication.html  index.html
