[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.7.4", features=["ws"]}
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"]}
futures = "0.3"
rusqlite = "0.38.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
uuid = {version = "1.20.0", features= ["v4"]}
sha2 = "0.10.9"
